# tauri-macos-spotlight-example

./: LICENSE.md  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accessibility.rs  main.rs  spotlight.rs
src/hooks/: useEscape.tsx
